# Carnap

./: cabal.project  default.nix  server.nix
Carnap-CLI/: Carnap-CLI.cabal
Carnap-CLI/app/: Main.hs
Carnap/src/Carnap/Calculi/NaturalDeduction/: Syntax.hs
Carnap/src/Carnap/Languages/DefiniteDescription/Logic/: Gamut.hs
Carnap/src/Carnap/Languages/ModalFirstOrder/Logic/: Hardegree.hs
Carnap/src/Carnap/Languages/ModalPropositional/Logic/: Hardegree.hs
Carnap/src/Carnap/Languages/PureFirstOrder/Logic/: Arthur.hs  Belot.hs  BergmannMoorAndNelson.hs  Bonevac.hs  Carnap.hs  Cortens.hs  Davis.hs  EbelsDuggan.hs  Equivalence.hs  Gallow.hs  Gamut.hs  Goldfarb.hs  Gregory.hs  Hardegree.hs  Hausman.hs  HowardSnyder.hs  Hurley.hs  IchikawaJenkins.hs  KalishAndMontague.hs  Lande.hs  Lemmon.hs  Magnus.hs  Raven.hs  ThomasBolducAndZach.hs  Tomassi.hs  Winkler.hs
Carnap/src/Carnap/Languages/PurePropositional/Logic/: Allen.hs  Arthur.hs  Belot.hs  BergmannMoorAndNelson.hs  Bonevac.hs  Carnap.hs  Cortens.hs  Davis.hs  EbelsDuggan.hs  Equivalence.hs  Gallow.hs  Gamut.hs  Goldfarb.hs  Gregory.hs  Hardegree.hs  Hausman.hs  HowardSnyder.hs  Hurley.hs  IchikawaJenkins.hs  KalishAndMontague.hs  Lande.hs  Lemmon.hs  Magnus.hs  Raven.hs  ThomasBolducAndZach.hs  Tomassi.hs  Winkler.hs
Carnap/src/Carnap/Languages/PureSecondOrder/Logic/: Carnap.hs  Gamut.hs
Carnap/src/Carnap/Languages/SetTheory/Logic/: Carnap.hs
