name:              Carnap-CLI
version:           0.1.0.0
synopsis:          Command-line proof checker using the Carnap library
license:           GPL-3
author:            Carlo Bernstein
maintainer:        cbernstein33@gmail.com
build-type:        Simple
cabal-version:     >= 1.10

executable carnap-cli
    if impl(ghcjs)
        buildable: False
    main-is:        Main.hs
    hs-source-dirs: app
    build-depends:  base >= 4.7 && < 5
                  , Carnap
                  , aeson
                  , bytestring
    ghc-options:    -Wall
    default-language: Haskell2010
